@@ -1,11 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.604 2006/02/28 13:30:03 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.605 2006/02/28 16:12:30 agaffney Exp $
 
   28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
   accept 'none' as well as 'null' for network type
+  src/GLIArchitectureTemplate.py:
+  ignore extended partitions in mount_local_partitions()
 
   27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
